pkgv1 and customer change data complete. Script files for work up to this point complete. Changes likely prior to creation of pkgv2.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "private": true,
   "version": "1.0.0",
   "description": "Salesforce App",
+  "type":"module",
   "scripts": {
+    "createCombinations": "node scripts/createCombinations.js",
     "createFlows": "mkdir -p force-app/main/default/flows && node scripts/createFlows.js",
-    "eraseFlows": "rm -r force-app/main/default/flows",
+    "eraseFlows": "rm -r force-app/main/default/flows/flownarios_*",
+    "updateFlows": "node updateFlows.js",
+    "launchNavigator": "npx http-server scripts",
+    "flownarioQueryV1": "cp scripts/packageV1.json scripts/backup/packageV1_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery --silent > scripts/packageV1.json && npm run flownarioMergeResults v1",
+    "flownarioQueryV2": "cp scripts/packageV2.json scripts/backup/packageV2_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/packageV2.json",
+    "flownarioQueryCustomer": "cp scripts/customer.json scripts/backup/customer_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/customer.json",
+    "flownarioQuery": "sf data query --bulk --json -w 10 -f scripts/query.txt",
+    "flownarioMergeResults": "node scripts/parseQueryResults.js",
     "lint": "eslint **/{aura,lwc}/**/*.js",
     "test": "npm run test:unit",
     "test:unit": "sfdx-lwc-jest",
