data from flows 0-159 after package v2 deployed

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "createCombinations": "node scripts/createCombinations.js",
     "createFlows": "mkdir -p force-app/main/default/flows && node scripts/createFlows.js",
     "eraseFlows": "rm -r force-app/main/default/flows/flownarios_*",
-    "updateFlows": "node updateFlows.js",
+    "updateFlows": "node scripts/updateFlows.js",
     "launchNavigator": "npx http-server scripts",
     "flownarioQueryV1": "cp scripts/packageV1.json scripts/backup/packageV1_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery --silent > scripts/packageV1.json && npm run flownarioMergeResults v1",
-    "flownarioQueryV2": "cp scripts/packageV2.json scripts/backup/packageV2_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/packageV2.json",
-    "flownarioQueryCustomer": "cp scripts/customer.json scripts/backup/customer_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/customer.json",
+    "flownarioQueryV2": "cp scripts/packageV2.json scripts/backup/packageV2_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/packageV2.json && npm run flownarioMergeResults v2",
+    "flownarioQueryCustomer": "cp scripts/customer.json scripts/backup/customer_$(date '+%Y%m%d_%H%M%S').json && npm run flownarioQuery  --silent > scripts/customer.json && npm run flownarioMergeResults cc",
     "flownarioQuery": "sf data query --bulk --json -w 10 -f scripts/query.txt",
     "flownarioMergeResults": "node scripts/parseQueryResults.js",
     "lint": "eslint **/{aura,lwc}/**/*.js",
