--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,7 +19,8 @@
     "flownarios@0.1.0-2": "04tHs000000BrpdIAC",
     "flownarios@0.1.0-3": "04tHs000000BrxyIAC",
     "flownarios@0.1.0-4": "04tHs000000Bry3IAC",
-    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS",
-    "flownarios@1.0.1-1": "04tHs000000BsmoIAC"
+    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS", // original v1
+    "flownarios@1.0.1-1": "04tHs000000BsmoIAC", // v1 amended (beta)
+    "flownarios@1.0.1-2": "04tHs000000BsrLIAS" // v2 (promoted)
   }
 }
