Customer changes complete, next step to create v2 package

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,11 +4,12 @@
       "path": "force-app/main/default",
       "package": "flownarios",
       "versionName": "ver 0.1",
-      "versionNumber": "1.0.1.NEXT",
+      "versionNumber": "2.0.0.NEXT",
       "ancestorVersion": "HIGHEST",
       "default": true,
       "versionDescription": "A collection of flow scenarios, flownarios, meant for testing outcomes between package version deployments."
-    }
+    },
+    {"path": "flow-overrides"}
   ],
   "name": "20240102_flownarios",
   "namespace": "mvpbo",
@@ -19,8 +20,9 @@
     "flownarios@0.1.0-2": "04tHs000000BrpdIAC",
     "flownarios@0.1.0-3": "04tHs000000BrxyIAC",
     "flownarios@0.1.0-4": "04tHs000000Bry3IAC",
-    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS", // original v1
-    "flownarios@1.0.1-1": "04tHs000000BsmoIAC", // v1 amended (beta)
-    "flownarios@1.0.1-2": "04tHs000000BsrLIAS" // v2 (promoted)
+    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS", 
+    "flownarios@1.0.1-1": "04tHs000000BsmoIAC", 
+    "flownarios@1.0.1-2": "04tHs000000BsrLIAS", 
+    "flownarios@2.0.0-1": "04tHs000000Bt3oIAC"
   }
 }
