post pkgv2 deployment, full data captured

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,9 +19,10 @@
     "flownarios@0.1.0-2": "04tHs000000BrpdIAC",
     "flownarios@0.1.0-3": "04tHs000000BrxyIAC",
     "flownarios@0.1.0-4": "04tHs000000Bry3IAC",
-    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS", 
-    "flownarios@1.0.1-1": "04tHs000000BsmoIAC", 
-    "flownarios@1.0.1-2": "04tHs000000BsrLIAS", 
-    "flownarios@2.0.0-1": "04tHs000000Bt3oIAC"
+    "flownarios@1.0.0-1": "04tHs000000Bs2GIAS",
+    "flownarios@1.0.1-1": "04tHs000000BsmoIAC",
+    "flownarios@1.0.1-2": "04tHs000000BsrLIAS",
+    "flownarios@2.0.0-1": "04tHs000000Bt3oIAC",
+    "flownarios@2.1.0-1": "04tHs000000BtjLIAS"
   }
 }
